# SRResCycGAN_MRI

./: .Rhistory  .gitignore  README.md  kaggle_test_environment.py  main.py  matplotlib_plot_digits_replhistory  plan.txt  plot-digits-grid.py  pyproject.toml  pyrightconfig.json  requirements.txt  train.py
.zed/: settings.json
data/: digits.csv  uporabljene_datoteke
experimenting/: convnet.py  data_loading_pipeline.py  dcgan-models.txt  dcgan.ipynb  dcgan.py  fastmri.py  gan-with-binary-dataset.ipynb  gan.ipynb  gan.py  mnist-data-loading.py  neg-log.r  perceptual-loss.py  plots.py  restored-model.ipynb  scratch.py  strides-padding.py
experimenting/training_checkpoints/: ckpt-1.index  ckpt-10.index  ckpt-11.index  ckpt-12.index  ckpt-13.index  ckpt-14.index  ckpt-15.index  ckpt-16.index  ckpt-2.index  ckpt-3.index  ckpt-4.index  ckpt-5.index  ckpt-6.index  ckpt-7.index  ckpt-8.index  ckpt-9.index
literature/: links.md  project-structure
literature/report/: main.typ
notes/: data-procedures.md  ideja.txt  links.md
notes/report/: SRResCycGAN.ipynb  main.typ  sources.yml  srrescycgan.ipynb
res/: .RData  .Rhistory  .d2l-en.autosave.xopp  Rplot01.tiff
res/d2l-book/: d2l-en.xopp
res/plots/: log.r
src/: README.md  SRResCycGAN.py  convnet.py  data-wrangling.py  data_loader.py  dcgan.ipynb  gan.ipynb  gan.py  losses.py  models.py  train.py  utils.py
src/.ipynb_checkpoints/: gan-checkpoint.ipynb  models-checkpoint.py
src/d2l/: 0.X-GAN.ipynb  00-tensors.ipynb  01-linear_algebra.ipynb  02-calculus.ipynb  03-common_practices.ipynb  04-gaussian_estimator.ipynb
(+10 files in other folders)
