[project]
name = "gan-osuprproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "tensorflow>=2.19.0",
    "tensorflow-addons>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
